# fastapi-http-exceptions

./: .gitignore  README.md  pyproject.toml
src/fastapi_http_exceptions/: http_exceptions.py  ws_exceptions.py
